{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 166,
  "lineage": "19a095e5-2053-0c28-e5ce-e469b422b15d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bda501dba2e3a0ba",
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:instance/i-0ac035a871215def0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "TeamRoleInstanceProfile",
            "id": "i-0ac035a871215def0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00bf8f735cdfec55e",
            "private_dns": "ip-10-0-0-26.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.26",
            "public_dns": "ec2-13-251-103-110.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.103.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-1:314146331900:key/17c69d77-5b8e-4cab-b35c-8f24e627fd42",
                "tags_all": {
                  "ManagedBy": "terraform",
                  "Project": "unicorn-gameday",
                  "Purpose": "wsc2022-tp53-day2-starter-kit"
                },
                "throughput": 125,
                "volume_id": "vol-08c7093a97a5804e5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e0d0cd474ac47fb",
            "tags": {
              "Name": "unicorn-gameday-bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-bastion",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e05de50b8af6528f"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.team_role",
            "aws_iam_role.team_role",
            "aws_security_group.bastion",
            "aws_subnet.bastion_public",
            "aws_vpc.bastion",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_policy_document.team_role_trust",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:internet-gateway/igw-06bd4fb55ace82c37",
            "id": "igw-06bd4fb55ace82c37",
            "owner_id": "314146331900",
            "tags": {
              "Name": "unicorn-gameday-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-igw",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit"
            },
            "vpc_id": "vpc-080572dbdb6168feb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:route-table/rtb-09288338f47417a79",
            "id": "rtb-09288338f47417a79",
            "owner_id": "314146331900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bd4fb55ace82c37",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "unicorn-gameday-bastion-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-bastion-public-rt",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit"
            },
            "timeouts": null,
            "vpc_id": "vpc-080572dbdb6168feb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bastion",
            "aws_vpc.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0060bb204a30bcb9d",
            "route_table_id": "rtb-09288338f47417a79",
            "subnet_id": "subnet-01e0d0cd474ac47fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.bastion",
            "aws_route_table.bastion_public",
            "aws_subnet.bastion_public",
            "aws_vpc.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:security-group/sg-0e05de50b8af6528f",
            "description": "Bastion host - no inbound access, SSM Session Manager only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e05de50b8af6528f",
            "ingress": [],
            "name": "unicorn-gameday-bastion-20260812085921597100000007",
            "name_prefix": "unicorn-gameday-bastion-",
            "owner_id": "314146331900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "unicorn-gameday-bastion-sg"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-bastion-sg",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit"
            },
            "timeouts": null,
            "vpc_id": "vpc-080572dbdb6168feb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bastion",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bastion_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:subnet/subnet-01e0d0cd474ac47fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e0d0cd474ac47fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "314146331900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "unicorn-gameday-bastion-public"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-bastion-public",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit"
            },
            "vpc_id": "vpc-080572dbdb6168feb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:314146331900:vpc/vpc-080572dbdb6168feb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac6fb02f34a2baef",
            "default_route_table_id": "rtb-08c5d56ee2220f2fb",
            "default_security_group_id": "sg-0e62350e8301caaf7",
            "dhcp_options_id": "dopt-0573ebabac3411367",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080572dbdb6168feb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c5d56ee2220f2fb",
            "owner_id": "314146331900",
            "tags": {
              "Name": "unicorn-gameday-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "unicorn-gameday-vpc",
              "Project": "unicorn-gameday",
              "Purpose": "wsc2022-tp53-day2-starter-kit"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}